samples/_failures_safe/1761203799_7e7eab_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dc9ecc1f.c: In function ‘display_entries_by_level’:
./samples/SAFE/__tmp_dc9ecc1f.c:134:9: error: expected declaration or statement at end of input
  134 |         }
      |         ^
./samples/SAFE/__tmp_dc9ecc1f.c:134:9: error: expected declaration or statement at end of input
